Fix(Styling): Fixed styling issues by css validator deprecated max-device-width and missing margin value

--- a/src/components/ProductList/ProductGallery/ProductGallery.scss
+++ b/src/components/ProductList/ProductGallery/ProductGallery.scss
@@ -28,7 +28,7 @@
 }
 
 /* Start Responsive */
-@media only screen and (max-device-width: 500px) {
+@media only screen and (max-width: 500px) {
   .product-gallery__quick-view {
     display: none;
   }
