--- a/src/sections/Header/GlobalSideBar/GlobalSideBar.scss
+++ b/src/sections/Header/GlobalSideBar/GlobalSideBar.scss
@@ -33,7 +33,6 @@
 
 .global-sidebar__close-container {
   text-align: end;
-  margin-bottom: rem;
 }
 
 .global-sidebar__close {
